<resources>
    <string name="app_name">HomelessShelterApp</string>
    <string name="homeless_shelter_app">Homeless Shelter App</string>
    <string name="logout">Logout</string>
    <string name="shelter_screen">List of Shelters</string>
    <string name="capacity">Capacity</string>
    <string name="gender">Gender</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="cancel">Cancel</string>
    <string name="claim">Claim</string>
    <string name="number_of_beds">Number of Beds:</string>
    <string name="no_vacancies">No vacancies left.</string>
    <string name="one_shelter_only">Cannot reserve in multiple shelters.</string>
    <string name="title_activity_maps">Map</string>
    <string name="return_to_search">Search</string>
    <string name="return_to_list">Return to list</string>
    <string name="show_map">Show map</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_screen">Login Screen</string>
    <string name="login">Login</string>
    <string name="done">Done</string>
    <string name="welcome">Welcome</string>
    <string name="incorrect_login">Incorrect Login, Please Try Again</string>
    <string name="register">Register</string>
    <string name="age_range">Age Range</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="shelter_name">Shelter Name</string>
    <string name="lockout">Too many failed logins, please wait five minutes</string>
</resources>
